<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin30"
            android:text="@string/booking"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/textSize60"

            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/carImageViewCardView"
            android:layout_width="@dimen/imageWidth"
            android:layout_height="@dimen/imageHeight"

            android:layout_marginTop="@dimen/margin12"

            app:cardCornerRadius="@dimen/corner10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pageTitle">

            <ImageView
                android:id="@+id/carImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:scaleType="centerCrop"

                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/detailLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin12"
            android:orientation="vertical"

            app:layout_constraintStart_toStartOf="@id/carImageViewCardView"
            app:layout_constraintTop_toBottomOf="@id/carImageViewCardView">

            <TextView
                android:id="@+id/make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/bookingInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin30"
            android:text="@string/bookingInformation"

            android:textSize="@dimen/textSize20"

            app:layout_constraintStart_toStartOf="@id/carImageViewCardView"
            app:layout_constraintTop_toBottomOf="@id/detailLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/startDatePickerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/margin12"

            app:layout_constraintEnd_toEndOf="@id/carImageViewCardView"
            app:layout_constraintStart_toStartOf="@id/carImageViewCardView"
            app:layout_constraintTop_toBottomOf="@id/bookingInformation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startDatePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:inputType="datetime"
                android:paddingHorizontal="@dimen/margin8"



                android:hint="@string/startDateLabel" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/endDatePickerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_baseline_calendar_month_24"

            android:layout_marginTop="@dimen/margin12"

            app:layout_constraintEnd_toEndOf="@id/carImageViewCardView"
            app:layout_constraintStart_toStartOf="@id/carImageViewCardView"
            app:layout_constraintTop_toBottomOf="@id/startDatePickerLayout" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/endDatePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:paddingHorizontal="@dimen/margin8"
                android:inputType="datetime"

                android:hint="@string/endDateLabel" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin30"

            android:background="@drawable/back_background_btn"

            android:text="@string/back"
            android:textColor="@color/white"

            app:layout_constraintEnd_toStartOf="@id/confirmBtn"
            app:layout_constraintStart_toStartOf="@id/carImageViewCardView"
            app:layout_constraintTop_toBottomOf="@id/endDatePickerLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/margin8"
            android:text="@string/confirm"
            android:background="@drawable/btn_background"

            android:textColor="@color/white"
            app:layout_constraintDimensionRatio="4"

            app:layout_constraintBottom_toBottomOf="@id/backBtn"
            app:layout_constraintEnd_toEndOf="@id/carImageViewCardView"
            app:layout_constraintStart_toEndOf="@id/backBtn"
            app:layout_constraintTop_toTopOf="@id/backBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
