<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/headerImage"

        tools:src="@tools:sample/avatars"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toTopOf="@id/headerImageGuidLine"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/headerImageCover"

        android:src="@drawable/login_header_image_cover"
        android:scaleType="centerCrop"

        app:layout_constraintBottom_toBottomOf="@id/headerImage"
        app:layout_constraintEnd_toEndOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="@id/headerImage"
        app:layout_constraintTop_toTopOf="@id/headerImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginText"

        android:text="@string/login"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        android:textSize="@dimen/textSize60"

        app:layout_constraintBottom_toBottomOf="@id/headerImage"
        app:layout_constraintEnd_toEndOf="@id/headerImage"
        app:layout_constraintStart_toStartOf="@id/headerImage"
        app:layout_constraintTop_toTopOf="@id/headerImage"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerImageGuidLine"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameFieldLabel"

        android:text="@string/username"
        android:textSize="@dimen/textSize20"

        android:layout_marginTop="@dimen/margin12"

        app:layout_constraintStart_toStartOf="@id/usernameETLayout"
        app:layout_constraintTop_toTopOf="@id/headerImageGuidLine"/>-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameETLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_marginHorizontal="@dimen/margin30"

        android:layout_marginTop="@dimen/margin30"
        app:boxStrokeErrorColor="?colorError"

        app:layout_constraintTop_toBottomOf="@id/headerImageGuidLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/usernameET"

            android:hint="@string/username"
            android:textSize="@dimen/textSize20"

            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--<EditText
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextHeight"
        android:id="@+id/usernameET"

        android:paddingHorizontal="@dimen/margin12"
        android:singleLine="true"

        android:layout_marginHorizontal="@dimen/margin30"
        android:background="@drawable/edit_text_background"

        app:layout_constraintTop_toBottomOf="@id/usernameFieldLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->


    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordFieldLabel"

        android:text="@string/password"
        android:textSize="@dimen/textSize20"

        android:layout_marginTop="@dimen/margin12"

        app:layout_constraintStart_toStartOf="@id/usernameETLayout"
        app:layout_constraintTop_toBottomOf="@id/usernameETLayout"/>-->

    <!--<EditText
        android:layout_width="0dp"
        android:layout_height="@dimen/editTextHeight"
        android:id="@+id/passwordET"

        android:layout_marginHorizontal="@dimen/margin30"
        android:paddingHorizontal="@dimen/margin12"
        android:inputType="textPassword"
        android:singleLine="true"
        android:background="@drawable/edit_text_background"

        app:layout_constraintTop_toBottomOf="@id/passwordFieldLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordETLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_marginTop="@dimen/margin30"

        app:layout_constraintTop_toBottomOf="@id/usernameETLayout"
        app:layout_constraintStart_toStartOf="@id/usernameETLayout"
        app:layout_constraintEnd_toEndOf="@id/usernameETLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/passwordET"

            android:hint="@string/password"
            android:textSize="@dimen/textSize20"

            android:paddingHorizontal="@dimen/margin12"
            android:inputType="textPassword"

            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginBtn"
        android:background="@drawable/btn_background"
        android:text="@string/login"
        android:textColor="@color/white"

        android:layout_marginTop="@dimen/margin30"
        android:paddingHorizontal="@dimen/margin30"

        app:layout_constraintTop_toBottomOf="@id/passwordETLayout"
        app:layout_constraintStart_toStartOf="@id/passwordETLayout"
        app:layout_constraintEnd_toEndOf="@id/passwordETLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>